[package]
name = "dutch-auction-controller"
version = "0.1.0"
edition = "2018"

[dependencies]
sbor = { path = "/home/eye/Develop/radixdlt-scrypto/sbor" }
scrypto = { path = "/home/eye/Develop/radixdlt-scrypto/scrypto" }

[dev-dependencies]
radix-engine = { path = "/home/eye/Develop/radixdlt-scrypto/radix-engine" }

[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.

[lib]
crate-type = ["cdylib", "lib"]
name = "out"
